Bug 73027 - [ILK Regression]igt/kms_flip/flip-vs-panning fails
Summary: [ILK Regression]igt/kms_flip/flip-vs-panning fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-25 08:25 UTC by lu hua
Modified: 2017-10-06 14:40 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (57.59 KB, text/plain)
2013-12-25 08:25 UTC, lu hua
no flags Details
full dmesg (116.69 KB, text/plain)
2014-01-09 07:14 UTC, lu hua
no flags Details

Description lu hua 2013-12-25 08:25:48 UTC
Created attachment 91185 [details]
dmesg

System Environment:
--------------------------
Platform: Ironlake
Kernel: (drm-intel-fixes)a885b3ccc74d8e38074e1c43a47c354c5ea0b01e

Bug detailed description:
-------------------------
It fails on Ironlake with -fixes kernel. It works well on -nightly branch.
Fellowing cases also fail:
igt/kms_flip/flip-vs-panning-interruptible
igt/kms_flip/rcs-wf_vblank-vs-modeset

The latest known good commit:acc240d41ea1ab9c488a79219fb313b5b46265ae
The latest known bad commit: a885b3ccc74d8e38074e1c43a47c354c5ea0b01e

output:
IGT-Version: 1.5-g4f28614 (i686) (Linux: 3.13.0-rc3_drm-intel-fixes_a885b3_20131224+ i686)
Using monotonic timestamps
Beginning flip-vs-panning on crtc 3, connector 10
  1366x768 60 1366 1398 1422 1426 768 771 775 806 0x9 0x48 69000
.....unexpected flip seq 27465, should be >= 27466
Subtest flip-vs-panning: FAIL

Reproduce steps:
----------------
1. ./kms_flip --run-subtest flip-vs-panning
Comment 1 lu hua 2013-12-25 08:26:38 UTC
It has another Bug 65558.
Comment 2 Paulo Zanoni 2014-01-03 20:07:44 UTC
Hi

Can you please finish bisecting so we can discover which commit exactly broke the feature? The information about latest known good/bad commit looks confusing.

Also, the dmesg file seems too short, perhaps it's incomplete.

Thanks,
Paulo
Comment 3 Daniel Vetter 2014-01-08 20:29:22 UTC
Ping again about the bisect result ...

And like Paulo noticed the dmesg doesn't contain any i915 message, so seems cut short. Please attach a new one.
Comment 4 lu hua 2014-01-09 07:14:28 UTC
Created attachment 91735 [details]
full dmesg

Bisect is in process. 
The latest known bad commit: 2dc1733fd4ebd4a67c9312d85f1dbc2ac2ffeb26
The latest known good commit: 05454c26eb3587b56abc5eb139797ac5afb6d77a
Comment 5 lu hua 2014-01-10 07:33:13 UTC
Try to bisect it. It randomly fails on many commits.
Comment 6 Daniel Vetter 2014-01-10 07:35:11 UTC
So even the old kernels randomly fail? Just wondering whether we should take out the regression tag ...

Or could this perhaps be a regression in i-g-t?
Comment 7 lu hua 2014-01-13 07:21:14 UTC
(In reply to comment #6)
> So even the old kernels randomly fail? Just wondering whether we should take
> out the regression tag ...
> 
> Or could this perhaps be a regression in i-g-t?

Test on latest kernel and old igt commit, It also fails. It's not igt regression.

Run on earlier kernel commit(05454c26eb3587b56abc5eb139797ac5afb6d77a), It fails 2 in 10 runs.

Run on latest kernel commit, It fails 20 in 20 runs.
Comment 8 Guang Yang 2014-05-17 01:16:36 UTC
Hua, can you help to retest this issue.
Comment 9 lu hua 2014-05-19 08:09:13 UTC
Test it on latest -nightly kernel, it still fails.

output:
IGT-Version: 1.6-g252d115 (x86_64) (Linux: 3.15.0-rc3_drm-intel-nightly_f79ba7_20140519+ x86_64)
Using monotonic timestamps
Beginning flip-vs-panning on crtc 5, connector 10
  1280x1024 60 1280 1328 1440 1688 1024 1025 1028 1066 0x5 0x48 108000
...................................................Test assertion failure function check_state, file kms_flip.c:564:
Last errno: 0, Success
Failed assertion: es->current_seq - (es->last_seq + o->seq_step) <= 1UL << 23
unexpected flip seq 4330, should be >= 4331
Subtest flip-vs-panning: FAIL
Comment 10 Daniel Vetter 2014-05-21 07:24:08 UTC
commit de3f30c53eff5ce58c04e8491bbae545aa4e6188
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Apr 15 21:41:34 2014 +0300

    drm/i915: Fix mmio vs. CS flip race on ILK+
Comment 11 lu hua 2014-05-23 05:39:58 UTC
It still fails on latest -fixes kernel.
output:
IGT-Version: 1.6-gff3c122 (x86_64) (Linux: 3.15.0-rc5_drm-intel-fixes_f93e94_20140523+ x86_64)
Using monotonic timestamps
Beginning flip-vs-panning on crtc 5, connector 10
  1280x1024 60 1280 1328 1440 1688 1024 1025 1028 1066 0x5 0x48 108000
.......Test assertion failure function check_state, file kms_flip.c:565:
Last errno: 0, Success
Failed assertion: es->current_seq - (es->last_seq + o->seq_step) <= 1UL << 23
unexpected flip seq 5317, should be >= 5318
Subtest flip-vs-panning: FAIL
Comment 12 lu hua 2014-06-09 05:48:23 UTC
Verified.Fixed.
Comment 13 Elizabeth 2017-10-06 14:40:48 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.